# RPG-com-Fastapi-e-sqlite-DIO

./: APIcode.py  README.md  RPG_OOP.py  database.py  main.py  pyproject.toml  rpg.db  security.py
controllers/: auth.py  battle.py  inventory_ctrl.py  player.py  rpg.py
models/: __init__.py  battle.py  inventory.py  player.py  rpg.py
schemas/: battle.py  inventory.py  player.py  rpg.py
services/: battle.py  inventory.py  player.py  rpg.py
views/: battle.py  inventory.py  player.py  rpg.py
