[project]
name = "rpg-api"
version = "0.1.0"
description = ""
authors = [
    {name = "rileyjoxd",email = "rileyjoxdbr@hotmail.com"}
]
requires-python = ">=3.14"
dependencies = [
    "fastapi[all]",
    "uvicorn[standard] (>=0.43.0,<0.44.0)",
    "databases[sqlite] (>=0.9.0,<0.10.0)",
    "pyjwt (>=2.12.1,<3.0.0)",
    "sqlalchemy (>=2.0.50,<3.0.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pydantic (>=2.13.4,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
